--- a/templates/base/js.html
+++ b/templates/base/js.html
@@ -6,5 +6,5 @@
 <script src="static/js/base.js"></script>
 <script src="static/js/modals.js"></script>
 <script src="static/js/script.js?v=0.6"></script>
-<script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit" type="text/javascript"></script>
+<!-- <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit" type="text/javascript"></script> -->
 <script src="https://unpkg.com/peerjs@1.5.2/dist/peerjs.min.js"></script>
