--- a/static/css/chat.css
+++ b/static/css/chat.css
@@ -67,21 +67,7 @@ background: rgb(187, 187, 187);
     display: flex;
     box-shadow: 1px 1px 3px 0 black;
 }
-#panelbody{
-    height: 80%;
-    flex-grow: 1;
-    position: relative;
-    overflow-y: auto; 
-    overflow-x: hidden; 
-    -ms-overflow-style: none; 
-    scrollbar-width: none;
-    border: none;
-}
 
-.panelheading{
-    position: relative;
-    display: flex;
-}
 
   /* Message bubble */
 #time{
@@ -118,57 +104,98 @@ background: rgb(187, 187, 187);
     width: 100%;
     display: flex;
     height: 93.2vh;
+    flex-direction: row;
 }
 
 .add{
+    display: block;
     position: relative;
     width: 20%;
-    margin: 2%;
+    margin: 1%;
+    height: 100%;
     margin-right: 1%;
 }
 .left{
+    height: 100%;
     display: block;
 }
 .chatbob{
+    height: 100%;
     width: 53%;
-    margin: 2%;
+    margin: 1%;
     margin-right: 1%;
+    display: flex;
+    flex-flow: column;
 }
+
+.chatbob .panelheading{
+    margin: 0px;
+    flex: 0 1 auto;
+    /* position: relative; */
+    /* display: flex; */
+}
+
+#panelbody{
+    padding: 2px;
+    /* height: 80%; */
+    margin: 5%;
+    margin-bottom: 2%;
+    flex: 1 1 auto;
+    flex-grow: 1;
+    /* position: relative; */
+    overflow-y: auto; 
+    overflow-x: hidden; 
+    -ms-overflow-style: none; 
+    scrollbar-width: none;
+    border: none;
+}
+
+
 .inputboxContainer{
-    width: 50%;
-    position: absolute; 
-    display: block; bottom: 0%;
-    margin-bottom: 20px;
+    width: auto;
+    /* position: absolute;  */
+    display: block; 
+    /* bottom: 0%; */
+    margin-left: 2.5%;
+    margin-right: 2.5%;
+    margin-bottom: 4px;
+    margin-top: auto;
+    /* margin-bottom: 20px; */
     /* transform: translateY(-100%);  */
     border: none;
 }
 @media( max-width: 750px) {
     /* panels */
-    #panelbody{
-        margin-top: 20px;
-        height: 80%;
-        margin-bottom: 10%;
-    }
+    
     .panelstyling{
-        padding: 0px;
         display: block;
-        width: 100%;
-        height: 100vh;
+        margin: 2px;
+        margin-bottom: 10px;
+        flex-grow: 1;
+        /* height: 84.2vh; */
     }
-    .right{
+    .add{ 
         display: none;
     }
     .chatbob{
         width: auto;
-        margin: 0px;
-        display: block;
-        height: 67vh;
+        margin-bottom: 5px;
+        display: flex;
+        /* height: 67vh; */
     }
-    .panelheading-status{
+    
+    .chatbob .panelheading-status{
         font-size: 13px;
-    }   
+    }  
+
+    .chatbob #panelbody{
+        flex: 1 1 auto;
+    }
+    
+     
     /* Adds */
     .add{
+        display: none;
         width: 100%;
         height: 10%;
         margin: 0px;
@@ -185,9 +212,13 @@ background: rgb(187, 187, 187);
     }
 
     .inputboxContainer{
-        width: 100%;
-        margin-bottom: 0px;
-        transform: translateY(-100%);
+        /* display: block; */
+        /* display: block; */
+        /* width: auto; */
+        flex: 0 1 40px;
+        /* bottom: 25px; */
+        margin-bottom: 21px;
+        /* transform: translateY(-100%); */
     }
     .inputsend{
         width: 100%;
@@ -202,14 +233,14 @@ background: rgb(187, 187, 187);
     }
 }
   
-@media (max-height:600px) and (max-width:750px){
+/* @media (max-height:600px) and (max-width:750px){
     .left{
         display: none;
     }
     .right{
         display: none;
     }
-}
+} */
 
 
   /* 3-dot popup */
@@ -257,7 +288,7 @@ background: rgb(187, 187, 187);
     background-color: #1e2225;
 
 }
-@media (max-width:750px){
+/* @media (max-width:750px){
     .dot{
         width: 4px;
         height: 4px;
@@ -270,7 +301,7 @@ background: rgb(187, 187, 187);
         cursor: pointer;
         font-size: 12px;
     }
-}
+} */
 
 .rightt{ 
     color: var(--message-send-color);
@@ -289,7 +320,8 @@ background: rgb(187, 187, 187);
 .none{
     display: none;
 }
-@media (max-width:750px){
+
+/* @media (max-width:750px){
     .leftt, .rightt{
         width: 12px;
     }
@@ -299,4 +331,4 @@ background: rgb(187, 187, 187);
     .leftt{
         left: -7px;
     }
-}
+} */
